[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/zeppelin.png" type="Texture" id=1]
[ext_resource path="res://Game_Parts/Enemy/EnemyBody.gd" type="Script" id=2]
[ext_resource path="res://Game_Parts/Enemy/MovementPatternA.tscn" type="PackedScene" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 10.0

[sub_resource type="CircleShape2D" id=3]
radius = 9.0

[sub_resource type="CircleShape2D" id=4]
radius = 120.0

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:speedMod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 0.5, -2 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0 ]
}

[node name="EnemyBody" type="RigidBody2D"]
collision_layer = 8
collision_mask = 8
mass = 60.0
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
linear_damp = 5.0
angular_damp = 15.0
script = ExtResource( 2 )

[node name="MovementPatternA" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -10 )
scale = Vector2( 0.243, 0.2 )
texture = ExtResource( 1 )

[node name="UpdateDirection" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
position = Vector2( 0, -9 )
shape = SubResource( 3 )

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
visible = false
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 5 )
[connection signal="timeout" from="UpdateDirection" to="." method="_on_UpdateDirection_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="area_entered" from="AggroRange" to="." method="_on_AggroRange_area_entered"]
[connection signal="body_entered" from="AggroRange" to="." method="_on_AggroRange_body_entered"]
